--- a/dwm.1
+++ b/dwm.1
@@ -140,11 +140,11 @@ View all windows with any tag.
 .B Mod1\-Control\-[1..n]
 Add/remove all windows with nth tag to/from the view.
 .TP
-.B Mod1\-Shift\-q
-Quit dwm.
+.B Mod1\-Shift\-r
+Restart dwm.
 .TP
 .B Mod1\-Control\-Shift\-q
-Restart dwm.
+Quit dwm.
 .SS Mouse commands
 .TP
 .B Mod1\-Button1
