--- a/README
+++ b/README
@@ -1,15 +1,14 @@
-dwm - dynamic window manager
-============================
+## dwm - dynamic window manager (quifisto's version)
 dwm is an extremely fast, small, and dynamic window manager for X.
+I added some personal modifications and some patches from suckless' website.
+Some of those can be found in the patches folder.
 
 
-Requirements
-------------
+## Requirements
 In order to build dwm you need the Xlib header files.
 
 
-Installation
-------------
+## Installation
 Edit config.mk to match your local setup (dwm is installed into
 the /usr/local namespace by default).
 
@@ -19,26 +18,9 @@ necessary as root):
     make clean install
 
 
-Running dwm
------------
+## Running dwm
 Add the following line to your .xinitrc to start dwm using startx:
 
-    exec dwm
-
-In order to connect dwm to a specific display, make sure that
-the DISPLAY environment variable is set correctly, e.g.:
-
-    DISPLAY=foo.bar:1 exec dwm
-
-(This will start dwm on display :1 of the host foo.bar.)
-
-In order to display status info in the bar, you can do something
-like this in your .xinitrc:
-
-    while xsetroot -name "`date` `uptime | sed 's/.*,//'`"
-    do
-    	sleep 1
-    done &
     exec dwm
 
 
@@ -46,3 +28,6 @@ Configuration
 -------------
 The configuration of dwm is done by creating a custom config.h
 and (re)compiling the source code.
+
+You then need to rerun dwm by restarting (alt+shift+r) or quitting (alt+ctrl+shitft+q)
+for the changes to take effect.
